# The-Anatomy-of-C-Plus-Plus-Lambdas-Examples

./: CMakeLists.txt  README.md
chapter1/: chapter1-is-above-age-function-object.cpp  chapter1-is-above-age-lambda.cpp  chapter1-is-even.cpp
chapter2/: chapter2-adder-function-object.cpp  chapter2-assigned-lambda.cpp  chapter2-counter-function-object-std-generate.cpp  chapter2-counter-function-object.cpp  chapter2-counter-lambda.cpp  chapter2-unnamed-lambda.cpp  chapter2-unnamed-struct.cpp
chapter3/: chapter3-auto-parameters.cpp  chapter3-basic-capture.cpp  chapter3-body-affecting-captures.cpp  chapter3-capture-all.cpp  chapter3-capture-by-reference.cpp  chapter3-capture-by-value.cpp  chapter3-capture-this.cpp  chapter3-capure-statics.cpp  chapter3-const-parameters.cpp  chapter3-constexpr-1.cpp  chapter3-constexpr-2.cpp  chapter3-explicit-object-parameter.cpp  chapter3-init-capture.cpp  chapter3-mutable.cpp  chapter3-nested-lambda.cpp  chapter3-parameters-default-arguments.cpp  chapter3-parameters-sum.cpp  chapter3-return-shapes.cpp  chapter3-template-parameters.cpp  chapter3-the-most-common-pitfall.cpp
chapter4/: chapter4-button-draw.cpp  chapter4-button-on-click.cpp  chapter4-find-even.cpp  chapter4-increment-as-template.cpp  chapter4-simple-lambda-as-template.cpp  chapter4-std-function-assignments.cpp  chapter4-std-function-basics.cpp  chapter4-std-function-signatures-must-match.cpp  chapter4-std-function-unassigned.cpp
chapter5/: chapter5-custom-deleter.cpp  chapter5-download-file.cpp  chapter5-event-dispatcher.cpp  chapter5-generate-powers-of.cpp  (+8 more)
(+1 files in other folders)
